# patchSeq.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
patchSeq/: __init__.py  __main__.py  core.py
patchSeq/keepingStrategies/: InDirKeepingStrategy.py  InMemoryKeepingStrategy.py.py
patchSeq/passes/: ExportPass.py  ImportPass.py  RemoveTheRest.py
patchSeq/utils/: __init__.py
